--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ logo: Res_ISL_Logo.png # 120x120 px default image used for Twitter summary card
 teaser: ISL_Logo.png # 400x250 px default teaser image used in image archive grid
 locale: en
 url: https://ISL-Homepage.github.io
-url: https://localhost:4000
+#url: https://localhost:4000
 #ISL domain
 url:
 feed:
