--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: "This is ISL homepage."
 logo: Res_ISL_Logo.png # 120x120 px default image used for Twitter summary card
 teaser: ISL_Logo.png # 400x250 px default teaser image used in image archive grid
 locale: en
-url: https://isl-homepage.github.io
+url: https://ISL-Homepage.github.io
 url: https://localhost:4000
 #ISL domain
 url:
